rCount wCount added testing